# duplicate-song-finder

./: .gitignore  CMakeLists.txt  build.sh  duplicate-song-finder.cabal  init.sh  music_duplicate_finder_design.txt  notes.txt
include/: .MusicReader.h.swp  CodecDefines.h  MusicReader.h
src/: .MusicReader.cpp.swp  Main.hs  MusicReader.cpp  MusicReader.hsc  front.c
